--- a/settings.html
+++ b/settings.html
@@ -33,8 +33,8 @@
                 </a>
             </div>
             <div class="col-6">
-                <a href="https://www.patreon.com/corbindavenport" target="_blank">
-                    <button type="button" class="btn btn-sm btn-success w-100">Donate via Patreon</button>
+                <a href="https://cash.app/$corbdav" target="_blank">
+                    <button type="button" class="btn btn-sm btn-success w-100">Donate via Cash App</button>
                 </a>
             </div>
         </div>
