Add shortcut edit button to settings page

--- a/settings.html
+++ b/settings.html
@@ -23,8 +23,8 @@
 
 <body>
     <div class="container-fluid">
-        <p><b>Paste this into the address bar to change the shortcut:</b></p>
-        <p class="link">chrome://extensions/shortcuts#:~:text=Picture%2Din%2DPicture%20Shortcut</p>
+        <button type="button" id="shortcut-btn" class="btn btn-sm btn-primary w-100 mb-2">Edit keyboard shortcut</button>
+        <hr>
         <p>If you find Picture-in-Picture Shortcut useful, please donate to support continued development. It would mean a lot!</p>
         <div class="row mb-3">
             <div class="col-6">
@@ -46,6 +46,8 @@
             <button type="button" class="btn btn-sm btn-primary w-100">Join Discord server</button>
         </a>
     </div>
+
+    <script src="js/settings.js"></script>
 </body>
 
 </html>
