Fix button layout

--- a/settings.html
+++ b/settings.html
@@ -23,7 +23,7 @@
 
 <body>
     <div class="container-fluid">
-        <button type="button" id="shortcut-btn" class="btn btn-sm btn-primary w-100 mb-2">Edit keyboard shortcut</button>
+        <button type="button" id="shortcut-btn" class="btn btn-sm btn-primary w-100 mb-2 mt-1">Edit keyboard shortcut</button>
         <hr>
         <p>If you find Picture-in-Picture Shortcut useful, please donate to support continued development. It would mean a lot!</p>
         <div class="row mb-3">
