--- a/settings.html
+++ b/settings.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="bootstrap.css" rel="stylesheet">
+    <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="css/dark.css" rel="stylesheet" media="(prefers-color-scheme: dark)">
     <style>
         body {
             max-width: 450px;
